update3. Mervin's set all done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,13 @@
         <activity
             android:name=".AdminCreateUserActivity"
             android:exported="false" />
+        <activity android:name=".ViewAllUsersActivity"
+            android:exported="false" />
+
+        <activity android:name=".UserDetailActivity"
+            android:exported="false" />
+
+
         <activity
             android:name=".loginPage"
             android:exported="true">
