update6.Dylan's set done -Mervin

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.12.0' // Recommended stable version as of now
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.activity:activity:1.8.0'
+    implementation libs.firebase.inappmessaging
 
 
     testImplementation 'junit:junit:4.13.2'
