--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,15 +13,31 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CSIT314SDM">
+        android:theme="@style/Theme.CSIT314SDM"
+        tools:targetApi="31">
+
+        <!-- This is the LAUNCHER activity, the one that opens first -->
+        <activity
+            android:name=".loginPage"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- List of all other activities in your app -->
+        <activity
+            android:name=".CreateUserAccountActivity"
+            android:exported="false" />
         <activity
             android:name=".CreateUserProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".CSRHomeScreenActivity"
+            android:name=".PINHomeScreenActivity"
             android:exported="false" />
         <activity
-            android:name=".PINHomeScreenActivity"
+            android:name=".CSRHomeScreenActivity"
             android:exported="false" />
         <activity
             android:name=".RegisterActivity"
@@ -30,62 +49,54 @@
             android:name=".AdminDashboardActivity"
             android:exported="false" />
         <activity
+            android:name=".AdminCreateUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".SearchUserActivity"
             android:exported="false" />
         <activity
-            android:name=".AdminCreateUserActivity"
+            android:name=".ViewAllUsersActivity"
             android:exported="false" />
-
-        <activity android:name=".ViewAllUsersActivity"
+        <activity
+            android:name=".UserDetailActivity"
             android:exported="false" />
-
-        <activity android:name=".UserDetailActivity"
+        <activity
+            android:name=".ViewSavedRequestsActivity"
             android:exported="false" />
-
-        <activity android:name=".ViewSavedRequestsActivity"
+        <activity
+            android:name=".CsrDashboardActivity"
             android:exported="false" />
-
-        <activity android:name=".HomepageAsPinActivity"
-            android:exported="false"/>
-
-        <activity android:name=".CsrDashboardActivity"
+        <activity
+            android:name=".HistoryActivity"
             android:exported="false" />
-
-        <activity android:name=".HistoryActivity"
-            android:exported="false"/>
-
-        <activity android:name=".CategoryManagementActivity"
-            android:exported="false"/>
-
-        <activity android:name=".PlatformDashboardActivity"
-            android:exported="false"/>
-
-        <!-- Add this line inside your <application> tag -->
+        <activity
+            android:name=".CategoryManagementActivity"
+            android:exported="false" />
+        <activity
+            android:name=".PlatformDashboardActivity"
+            android:exported="false" />
         <activity
             android:name=".HelpRequestDetailActivity"
             android:exported="false" />
-
-        <activity android:name=".DailyReportActivity"
-            android:exported="false" />
-
-        <activity android:name=".WeeklyReportActivity"
-            android:exported="false" />
-
-        <activity android:name=".MonthlyReportActivity"
-            android:exported="false" />
-
-        <activity android:name=".ManageCategoriesActivity"
-            android:exported="false" />
-
         <activity
-            android:name=".loginPage"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".DailyReportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".WeeklyReportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MonthlyReportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ManageCategoriesActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateHelpRequestPage"
+            android:exported="false" />
+        <activity
+            android:name=".MyRequestsActivity"
+            android:exported="false" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
