--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,20 +7,19 @@ appcompat = "1.6.1"
 material = "1.10.0"
 activity = "1.8.0"
 constraintlayout = "2.1.4"
-impress = "0.0.6"
-firebaseInappmessaging = "22.0.1"
+firebaseBom = "33.1.0"
+firebaseInAppMessaging = "22.0.2" # example version, adjust as needed
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
+"ext-junit" = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
+"espresso-core" = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
-impress = { group = "com.google.ar", name = "impress", version.ref = "impress" }
-firebase-inappmessaging = { group = "com.google.firebase", name = "firebase-inappmessaging", version.ref = "firebaseInappmessaging" }
+"firebase-bom" = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
+firebase-inappmessaging = { group = "com.google.firebase", name = "firebase-in-app-messaging", version.ref = "firebaseInAppMessaging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-
