--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,10 @@
-#Thu Oct 09 18:24:23 SGT 2025
+properties
+
+
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.13-bin.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
+
+# Pointing to a modern, stable Gradle version.
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.13-bin.zip
