update9. New Update that includes wuxian, Mervin, Dylan, Sunji and christel's parts. The search and filter functions have been included and fixed. Only left suhaila's part

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,14 @@
         <activity android:name=".CsrDashboardActivity"
             android:exported="false" />
 
+        <activity android:name=".UserManagementActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".UserAccountsActivity"
+            android:exported="false" />
+
+
         <activity android:name=".HistoryActivity"
             android:exported="false"/>
 
