Update 16. ensured that when csr clicks on my request, it takes him to a new page to show the current list of active requests that he has

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -114,6 +114,9 @@
             android:name=".ViewAllUsersActivity"
             android:exported="false" />
         <activity
+            android:name=".MyInProgressRequestsActivity"
+            android:exported="false" />
+        <activity
             android:name=".ViewSavedRequestsActivity"
             android:exported="false" />
         <activity
